# tc-play

./: Makefile.am  README.md  argon2-hash.h  argon2.c  configure.ac  crypto-dev.c  crypto-gcrypt.c  crypto.c  hdr.c  io.c  m.sh  main.c  pbkdf2-gcrypt.c  pbkdf2-openssl.c  safe_mem.c  safe_mem.h  tcplay.c  tcplay.h
scripts/: gen-key.sh
yubico/: chalresp.c  chalresp.h  error.h  piv-pin.c  piv.c  piv.h  tc-common.c  tc-common.h  tc-yubico-piv-tool.c  tc.h  yubico-keyfile.c
